Fixed a font-size bug on small screens.

--- a/sass/theme/minimal.scss
+++ b/sass/theme/minimal.scss
@@ -9,15 +9,16 @@ $minimal-color-epsilon:#f77575;
 
 /* theme */
 body[data-theme='minimal'] {
-  font: 1.4em/1.6em "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
+  font: 1.2em/1.6em "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
   color:#333;
   background: #fff;
   background-size:50% 100%;
 
   h1 {
-    font: 3.4em/1.9em 'Krona One', sans-serif;
+    font: 3.1em/1.9em 'Krona One', sans-serif;
     letter-spacing:.15em;
     border-bottom:.25em solid rgba(0, 0, 0, .4);
+    margin-top:1.5em;
   }
 
   h2 {
@@ -176,27 +177,8 @@ body[data-theme='minimal'] {
 /* small screens */
 @media screen and (max-width: 44em) {
   body[data-theme='minimal'] {
-
-    font-size: 1.6em;
-
-    h1,
-    article[data-text]:after {
-      font-size:2.3em;
-    }
-
     section > div {
       padding: .5em;
-    }
-  }
-}
-
-@media screen and (max-width: 66em) {
-  body[data-theme='minimal'] {
-
-    font-size: 1.6em;
-
-    h1 {
-      font-size:2.3em;
     }
   }
 }
